# fidlcrs

./: .gitignore  AGENTS.md  Cargo.toml  all-missing-tests.txt  bind-mount.sh  clippy_errors.txt  compare-generation.sh  cpp_tests.txt  diff_output.txt  errors.json  fidl.patch  find_missing_tests.py  generate-goldens.sh  generate_diagnostics.py  list_tests.py  port.py  port_errcat.py  port_errors_tests.py  port_parsing_tests.py  port_recov.py  port_spans.py  port_tests.py  port_utils.py  port_version_basic.py  port_versioning.py  resolve_todos.py  rust_tests.txt  show_private_errors.py  split_it.py  test.json  test_f32  test_f32.rs  test_float  test_float.cc  test_out.txt  test_ports.py  test_script.sh
.agent/workflows/: cleanup.md  crank.md
.thicket/: config.json  tickets.jsonl
src/: alias_tests.rs  array_tests.rs  attribute_schema.rs  attributes_tests.rs  availability_step.rs  bits_tests.rs  canonical_names.rs  canonical_names_tests.rs  cli.rs  compare_generation_tests.rs  compile_step.rs  compiler.rs  consts_tests.rs  consume_step.rs  declaration_order_tests.rs  diagnostics.rs  direct_dependencies_tests.rs  enums_tests.rs  experimental_flags.rs  flat_ast.rs  golden_test.rs  handle_tests.rs  json_generator.rs  lexer.rs  lib.rs  main.rs  method_tests.rs  name.rs  names.rs  parser.rs  parsing_tests.rs  protocol_tests.rs  raw_ast.rs  replacement_step.rs  reporter.rs  resolve_step.rs  resource_tests.rs  resourceness_tests.rs  service_tests.rs  source_file.rs  (+14 more)
src/compiler/: aliases.rs  attributes.rs  bits.rs  constants.rs  dependencies.rs  enums.rs  mod.rs  protocols.rs  (+5 more)
(+57 files in other folders)
