[package]
name = "fidlcrs"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
indexmap = { version = "2.13.0", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["raw_value", "preserve_order"] }
sha2 = "0.10.9"

regex = "1.12.3"

[dev-dependencies]
